Shenandoah: Mix-in NULL_PTR in non-strong ShLRBNode's type

XMLWordPrintable

    • gc
    • b24
    • generic
    • generic

      Testing found this problem (very rare/hard to reproduce):

      # Internal Error (d:/a/jdk/jdk/jdk/src/hotspot/cpu/x86/macroAssembler_x86.cpp:880), pid=6160, tid=5828
      # fatal error: DEBUG MESSAGE: unexpected null in intrinsic

      I believe this may be caused by non-strong LRB reporting a non-NULL type by passing-through its input's type, even though it may actually return NULL on non-NULL inputs. If this serves as input to an intrinsic, it may lead to elimination of surrounding null-check, and thus end up passing a NULL to the intrinsic even thought it should not.

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: