8256046: Shenandoah: fatal error: DEBUG MESSAGE: unexpected null in intrinsic